[api-ng] Add initial /api/2/search/changes endpoint
