# monocle/webapi.py
@@ -27,9 +27,11 @@ def config_service(app):
 
 
 def search_service(app):
-    from monocle.api import search_suggestions
+    from monocle.api import search_suggestions, search_changes_query
     from monocle.messages.search_pb2 import SearchSuggestionsRequest
     from monocle.messages.search_pb2 import SearchSuggestionsResponse
+    from monocle.messages.search_pb2 import ChangesQueryRequest
+    from monocle.messages.search_pb2 import ChangesQueryResponse
 
     def suggestions_stub() -> None:
         input_data: bytes = request.get_data() or b"{}"
@@ -42,6 +44,22 @@ def search_service(app):
 
     app.add_url_rule(
         "/api/1/suggestions", "Suggestions", suggestions_stub, methods=["GET", "POST"]
+    )
+
+    def changes_query_stub() -> None:
+        input_data: bytes = request.get_data() or b"{}"
+        input_request: ChangesQueryRequest = pbjson.Parse(input_data, ChangesQueryRequest())  # type: ignore
+        output_resp: ChangesQueryResponse = search_changes_query(input_request)
+        json_resp = pbjson.MessageToJson(output_resp, preserving_proto_field_name=True)
+        return app.response_class(
+            response=json_resp, status=200, mimetype="application/json"
+        )
+
+    app.add_url_rule(
+        "/api/2/search/changes",
+        "ChangesQuery",
+        changes_query_stub,
+        methods=["GET", "POST"],
     )
 
 
